manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-openshift-cicd
  labels:
    app: python-openshift-cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-openshift-cicd
  template:
    metadata:
      labels:
        app: python-openshift-cicd
    spec:
      containers:
        - name: python-openshift-cicd
          image: image-registry.openshift-image-registry.svc:5000/jbanday100-dev/python-openshift-cicd:latest
          ports:
            - containerPort: 8080
