manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-openshift-cicd
spec:
  selector:
    app: python-openshift-cicd
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
