manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: python-openshift-cicd
spec:
  to:
    kind: Service
    name: python-openshift-cicd
  port:
    targetPort: 8080
